# thinkcompute.github.io

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  build_book.sh  pyproject.toml  requirements.txt  watch_book.sh
.github/workflows/: deploy.yml
scripts/: create_venn_diagram.py
think_and_compute/: 00-preface.md  01-computational-thinking.md  02-algorithms.md  03-computability.md  04-programming-languages.md  05-ordered-structures.md  06-brute-force.md  07-unordered-structures.md  08-recursion.md  09-divide-and-conquer.md  10-dynamic-programming.md  11-trees.md  12-backtracking.md  13-graphs.md  14-greedy.md  15-what-is-a-datum.ipynb  16-data-models.ipynb  17-pandas.ipynb  19-draft.ipynb  19-relational-database.ipynb  20-graph-database.ipynb  21-querying-databases.ipynb  _config.yml  _toc.yml  intro.md  lab-01.md  lab-02.md  lab-03.md  lab-04.md  lab-05.md  lab-06.md  lab-07.md  lab-08.md  lab-09.md  lab-10.md  lab-11.md  lab-12.md  part-1-exercises.md  part-2-exercises.md  part-3-exercises.md  (+4 more)
think_and_compute/.ipynb_checkpoints/: 18-statistics-checkpoint.ipynb  19-draft-checkpoint.ipynb  19-relational-database-checkpoint.ipynb
think_and_compute/material/: 01-publications-2020.csv  01-publications-modified-with-pandas.csv  ex-15-2-01-publications-venue-names.csv  ex-dev-atari_go.py  ex-dev-chars_in_both_strings.py  ex-dev-euclidean.py  ex-dev-sum.py  ex-hon_1-2.ipynb  ex-hon_2-2.ipynb  ex-hon_3-1.ipynb  ex-hon_3-2.ipynb  ex-hon_4-1.ipynb  ex-hon_4-2.ipynb  ex-hon_6-1.ipynb  ex-hon_6-2.ipynb  ex-quicksort.py  ex-und-binary_sum_matriculation.py  my-venues.db  (+2 more)
(+38 files in other folders)
