[project]
name = "think-and-compute"
version = "0.1.0"
description = "Think and Compute: a Primer for Digital Humanists - An educational resource for the Computational Management of Data course"
requires-python = ">=3.11"
dependencies = [
    "ghp-import>=2.1.0",
    "jupyter-book~=1.0.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "python-dateutil>=2.9.0.post0",
    "rdflib>=7.4.0",
    "sparql-dataframe>=0.4",
    "sphinx-exercise>=1.2.0",
    "watchdog[watchmedo]>=6.0.0",
]
